--- a/src/exercises/01-searchbar.css
+++ b/src/exercises/01-searchbar.css
@@ -1,6 +1,87 @@
+:root {
+  /* Color styles */
+  --white: #ffffff;
+  --gray--100: #bcc3c7;
+  --gray--500: #6d7478;
+  --gray--950: #040404;
+  --green-100: #cdf5de;
+  --green-200: #9aebbe;
+  --green-300: #68e09d;
+  --green-400: #35d67d;
+  --green-500: #03cc5c;
+  --green-600: #02a34a;
+  --green-700: #027a37;
+  --green-800: #015225;
+  --green-900: #012912;
+  --blue--100: #01a9ff;
+  --blue--200: #4284f7;
+
+  /* Effect styles */
+  --shadow--100: 0px 4px 4px rgba(68, 131, 63, 0.15);
+}
+
 .searchBar {
   display: flex;
-  border: 1px solid var(--green-100, #03cc5c);
-  padding: 12px 12px 12px 20px;
+  justify-content: space-between;
   gap: 16px;
+  border: 1px solid var(--green-500, #03cc5c);
+  padding: 12px 12px 12px 20px;
+  background: var(--white, #fff);
+  border-radius: 50px;
+
+  /* :focus-within => 내부안에 초점이 있는 요소가 있다면 스타일링 해달라 */
+  &:focus-within {
+    box-shadow: var(--shadow--100);
+  }
+
+  /* container */
+  [role="group"] {
+    display: flex;
+    gap: 12px;
+    flex: 1;
+  }
+
+  input[type="search"] {
+    flex: 1;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    border: 0;
+    font-family: inherit;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 1.3;
+    color: var(--gray--500);
+
+    &:focus {
+      outline: none;
+    }
+    /* &:focus-visible { */
+    /* outline: 2px solid var(--green--500); */
+    /* border-radius: 4px; */
+    /* } */
+    &::placeholder {
+      color: var(--gray-100, #bcc3c7);
+    }
+  }
+
+  /* width: inline-size / height: block-size를 권장합니다. */
+  /* button 초기화 */
+  button[type="submit"] {
+    --size: 24px;
+
+    cursor: pointer;
+    inline-size: var(--size);
+    block-size: var(--size);
+    border: 0;
+    padding: 0;
+    background: transparent;
+
+    &:focus-visible {
+      outline: 4px solid var(--green-300);
+      border-radius: 50%;
+    }
+    &:active {
+      scale: 0.9;
+    }
+  }
 }
