--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -3,8 +3,8 @@
 }
 
 body {
-  font: 1rem / 1.5 "SUIT Variable", "Helvetica Neue", Arial, sans-serif;
-  background: var(--primary, #2731f4);
+  font: 1rem / 1.5 'SUIT Variable', 'Helvetica Neue', Arial, sans-serif;
+  /* background: var(--primary, #2731f4); */
   color: var(--white, #fff);
 }
 
