--- a/src/components/Avatar/Avatar.css
+++ b/src/components/Avatar/Avatar.css
@@ -1,5 +1,6 @@
 .Avatar {
   --size: 64px;
+  --shadow--200: 0px 0px 2px rgba(114, 119, 124, 0.2);
 
   position: relative;
   inline-size: var(--size);
@@ -7,6 +8,8 @@
   margin: 0;
 
   img {
+    inline-size: var(--size);
+    block-size: var(--size);
     aspect-ratio: 1 / 1;
     border-radius: 50%;
   }
@@ -25,7 +28,7 @@
     box-shadow: var(--shadow--200);
 
     &.online {
-      background-color: #4bfe88;
+      background-color: #4BFE88;
     }
   }
 }
