--- a/src/components/Stack/Stack.module.css
+++ b/src/components/Stack/Stack.module.css
@@ -7,6 +7,7 @@
 
   display: flex;
   flex-flow: var(--direction) var(--wrap);
+  align-items: flex-start;
   gap:var(--gap);
   margin: var(--marginBlock) var(--marginInline);
 }
